<resources>
    <string name="app_name">Calculator</string>

    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_4">4</string>
    <string name="number_6">6</string>
    <string name="number_1">1</string>
    <string name="number_5">5</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_0">0</string>

    <string name="dot_sign">.</string>

    <string name="all_cleared">AC</string>
    <string name="clear">C</string>

    <string name="result">= %s</string>
    <string name="expression">%s</string>
    <string name="default_output_size" />
    <string name="default_input_size" />
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="settings_key">shared_settings_key</string>
    <string name="saved_input_font_key">input_font</string>
    <string name="saved_input_font_size_key">input_font_size</string>
    <string name="saved_input_formatting_key">input_formatting</string>
    <string name="saved_input_font_color_key">input_font_color</string>

    <string name="saved_output_font_key">output_font</string>
    <string name="saved_output_font_size_key">output_font_size</string>
    <string name="saved_output_formatting_key">output_formatting</string>
    <string name="saved_output_font_color_key">output_font_color</string>

    <string name="saved_function_button_color_key">function_button_color</string>
    <string name="saved_number_button_color_key">number_button_color</string>
    <string name="saved_operator_button_color_key">operator_button_color</string>

    <string name="saved_clear_button_color_key">clear_button_color</string>
    <string name="saved_clear_all_button_color_key">clear_all_button_color</string>

    <string name="saved_disabled_button_color_key">disabled_button_color</string>
    <string name="saved_highlighting_color_key">highlighting_color</string>


    <string name="default_color">%s</string>
    <string name="title">Title</string>
    <string name="summary">Summary</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
</resources>